# AK5PC_Shape2D

./: .gitignore  CMakeLists.txt  LICENSE.MD  README.md  main.cpp
ShapeLib/: CMakeLists.txt
ShapeLib/include/: circle.h  point.h  rectangle.h  shape.h
ShapeLib/src/: circle.cpp  point.cpp  rectangle.cpp  shape.cpp
doc/output/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _l_i_c_e_n_s_e_8_m_d.html  _r_e_a_d_m_e_8md.html  annotated.html  circle_8cpp.html  circle_8h.html  circle_8h_source.html  class_point-members.html  class_point.html  class_shape_lib_1_1_circle-members.html  class_shape_lib_1_1_circle.html  class_shape_lib_1_1_point-members.html  class_shape_lib_1_1_point.html  class_shape_lib_1_1_rectangle-members.html  class_shape_lib_1_1_rectangle.html  class_shape_lib_1_1_shape-members.html  class_shape_lib_1_1_shape.html  classes.html  dir_0b56168d0ad34481ab0fb8a0c46bffdc.html  dir_1ea19c902d8bb3752999f5a8b6132c3a.html  dir_3a8feefd1cb361d121d387a3d880dbce.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_c840fe33e41efafd09f6df2823d380b3.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e4db62497e01360de151742c4c9ede63.html  dir_ec7416233dfe6377246b9de07e5ee113.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  main_8cpp.html  (+20 more)
doc/output/latex/: _c_make_c_compiler_id_8c.tex  _l_i_c_e_n_s_e_8_m_d.tex  (+51 more)
doc/proj/: Doxyfile
(+96 files in other folders)
